--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <a class="nav-link"  target="_blank" href="https://algonetwork.github.io/TokenFactory/">Token Factory </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" target="_blank" href="https://algonetwork.github.io/Bee-Sender/">Multi Sender</a>
+        <a class="nav-link" target="_blank" href="https://arvind9.github.io/ACT-Sender//">Multi Sender</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" target="_blank" href="https://algonetwork.github.io/EVM-Blockchain-Index/">EVM Blockchain index</a>
